ZoomPan cursor, instrument modal css

--- a/app/components/scales/scales.html
+++ b/app/components/scales/scales.html
@@ -5,12 +5,10 @@
     </div>
 
     <div class="surface-container">
-        <div><svg zoom-pan class="scales select-disable" 
-
-
-                style="border: 1px solid blue" id="svg-surface" 
-
-                preserveAspectRatio="xMidYMin meet"></svg></div>
+        <div><svg zoom-pan
+                class="scales select-disable" 
+                id="svg-surface" 
+                preserveAspectRatio="xMidYMid meet"></svg></div>
     </div>
 
     <div class="zoom-pan-control">
@@ -21,12 +19,7 @@
 </div>
 
 <div class="container-options">    
-    <div ng-mouseover="Scales.tooltip = 'scale'" ng-mouseout="Scales.tooltip = null">
-        <h1>{{Scales.JSONData.scales[Scales.selection.scale].name}} Scale</h1>
-        <span class="subtitle" ng-repeat="pitch in Scales.JSONData.scales[Scales.selection.scale].steps">{{pitch + ' '}}</span>
-    </div>        
-
-    <div class="settings-panel div-inline">
+    <div class="settings-panel settings-panel-instrument div-inline">
         <div class="header">
             <span>
                 <img src="/assets/img/guitar-128-2.png" alt="Scale"/>
@@ -35,154 +28,45 @@
             <i class="edit fa fa-gear" ng-click="Scales.modal = 'instrument'"></i>
         </div>
         <div class="content">
-
-            <table>
-                <tr>
-                    <td>
-                        {{Scales.instrument.type}}
-                    </td>
-                    <td></td>
-                </tr>
-
-                <tr>
-                    <td colspan="2">
-                         <img class="instrument-icon" 
-                             ng-class="{'left-handed': Scales.instrument.handedness == 'Left'}" 
-                             src="{{Scales.instrument.arr[Scales.instrument.index].instPanel.path}}" 
-                             viewBox="{{Scales.instrument.arr[Scales.instrument.index].instPanel.viewBox}}"
-                        />
-                    </td>
-                </tr>
-
-                <tr>
-                    <td style="width: 100px;">
-                        Strings
-                    </td>
-                    <td>
-                        {{Scales.instrument.arr[Scales.instrument.index].strings}}
-                    </td>
-                </tr>
-
-                <tr>
-                    <td style="width: 100px;">
-                        Tuning
-                    </td>
-                    <td>
-                        {{Scales.JSONData.tunings[Scales.instrument.getCurrentTuning()].name}} {{Scales.getCurrentTuningNotes()}}
-                    </td>
-                </tr>
-            </table>
-
-
-
-           
-              
-        </table>                    
+            <div class="instrument-picture">
+                <img ng-class="{'left-handed': Scales.instrument.handedness == 'Left'}" 
+                    src="{{Scales.instrument.arr[Scales.instrument.index].instPanel.path}}" 
+                    viewBox="{{Scales.instrument.arr[Scales.instrument.index].instPanel.viewBox}}"
+                />
+            </div>
+                    
+            <div class="row">
+                {{Scales.instrument.arr[Scales.instrument.index].strings}} String
+                <span class="pull-right">
+                    {{Scales.JSONData.tunings[Scales.instrument.getCurrentTuning()].name.replace('Tuning', '')}} Tuning ({{Scales.getCurrentTuningNotes()}})
+                </span>
+            </div>
         </div>
     </div>
 
-<div class="settings-panel div-inline">
-    <div class="header">
-        <span><img src="/assets/img/musicfile-128.png" alt="Scale"/></span>
-        Scale
-    </div>
-    <div class="content">
-        <table>
-            <tr>
-                <td>
-                    <label for="tonic">Tonic</label>
-                </td>
-                <td>
-                    <select name="tonic" class="select-sm" ng-model="Scales.selection.tonic" ng-change="Scales.drawing.drawScale()">
-                        <option value="{{key}}" ng-repeat="(key, val) in Scales.JSONData.tonics">{{val}}</option>  
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label for="scale">Scale</label>
-                </td>
-                <td>
-                    <select name="scale" class="select-lg" ng-model="Scales.selection.scale" ng-change="Scales.drawing.drawScale()">     
-                        <option value="{{key}}" ng-repeat="(key, val) in Scales.JSONData.scales">{{val.name}}</option>                           
-                    </select>
-                </td>
-            </tr>
-        </table>
-    </div>
-
-    <a class="button" ng-click="Scales.action()">Dont Push</a>
-</div>
-
-
-
-<div class="modal-dialog instrument-modal" ng-class="{'modal-show': Scales.modal == 'instrument'}">
-    <div class="modal-lg">        
-        <a href="" title="Close" class="modal-close" ng-click="Scales.modal = null">&#215;</a>
-        <h2>Instrument</h2>
-        
-        <ul class="tab-menu">
-            <li class="instrument-icon" ng-click="Scales.instrument.type = 'Guitar'" ng-class="{'active': Scales.instrument.type == 'Guitar'}">
-                <img src="/assets/svg/menu/main_guitar_o.svg" viewBox="0 0 100 100" alt="Guitar Scales"/> 
-            </li>
-            <li class="instrument-icon" ng-click="Scales.instrument.type = 'Bass Guitar'" ng-class="{'active': Scales.instrument.type == 'Bass Guitar'}">
-                <img src="/assets/svg/menu/main_bass_o.svg" viewBox="0 0 100 100" alt="Bass Guitar Scales"/>
-            </li>
-            <li class="instrument-icon" ng-click="Scales.instrument.type = 'Piano'" ng-class="{'active': Scales.instrument.type == 'Piano'}">
-                <img src="/assets/svg/menu/main_piano_o.svg" viewBox="0 0 100 100" alt="Piano Scales"/>
-            </li>
-        </ul>
+    <div class="settings-panel div-inline">
+        <div class="header">
+            <span><img src="/assets/img/musicfile-128.png" alt="Scale"/></span>
+            Scale
+        </div>
         <div class="content">
-            <!--<ul>
-                <li ng-hide="instrument.type == 'Piano'" ng-repeat="str in instrument.getInstrumentStrings()">{{str}}</li>
-            </ul>-->
-            
-                <div class="string-selection">
-                    <ul>
-                        <li 
-                            ng-repeat="(key, val) in Scales.instrument.selectedTuning[Scales.instrument.type]"
-                            ng-click="Scales.instrument.setStrings(key)"
-                            ng-class="{'active': Scales.instrument.selectedStrings[Scales.instrument.type] == key}">
-                                {{key}}
-                        </li>
-                    </ul>
-                </div>
-                <div class="instrument-selection">
-                    <div class="instrument"
-                         ng-repeat="i in Scales.instrument.arr track by $index" 
-                         ng-show  ="i.type == Scales.instrument.type && (i.strings == Scales.instrument.selectedStrings[Scales.instrument.type] || i.strings == 0)" 
-                         ng-click ="Scales.setInstrument($index)"
-                         ng-class ="{'selected': $index == Scales.instrument.index }">
-                        
-                        <div class="shadow">
-                            <img src="{{i.instSelect.path}}" viewBox="i.instSelect.viewbox" ng-class="{ 'left-handed': Scales.instrument.handedness == 'Left' }"/>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="guitar-settings" ng-hide="Scales.instrument.type == 'Piano'">
-                <label for="tuning">Tuning</label>
-                <select 
-                    name="tuning" 
-                    class="select-lg" 
-                    ng-model="Scales.instrument.selectedTuning[Scales.instrument.type][Scales.instrument.selectedStrings[Scales.instrument.type]]" 
-                    ng-change="Scales.drawing.drawScale()">
-                        <option 
-                            value="{{key}}" 
-                            ng-show="val.type == Scales.instrument.type && val.strings == Scales.instrument.selectedStrings[Scales.instrument.type]"
-                            ng-repeat="(key, val) in Scales.JSONData.tunings">
-                            {{val.name}}
-                        </option>
+            <div class="row">
+                <select name="tonic" class="select-sm" ng-model="Scales.selection.tonic" ng-change="Scales.drawing.drawScale()">
+                    <option value="{{key}}" ng-repeat="(key, val) in Scales.JSONData.tonics">{{val}}</option>  
                 </select>
-
-                <select name="handedness" ng-model="Scales.instrument.handedness" ng-change="Scales.drawing.reload()">
-                    <option value="Right">Right-Handed</option>
-                    <option value="Left">Left-Handed</option>
+                <select name="scale" class="select-lg" ng-model="Scales.selection.scale" ng-change="Scales.drawing.drawScale()">     
+                    <option value="{{key}}" ng-repeat="(key, val) in Scales.JSONData.scales">{{val.name}}</option>                           
                 </select>
             </div>
-
+    
+            <div class="row">
+                <div ng-mouseover="Scales.tooltip = 'scale'" ng-mouseout="Scales.tooltip = null">
+                    <h1 class="subtitle">{{Scales.JSONData.scales[Scales.selection.scale].name}} Scale</h1>
+                    <span class="subtitle" ng-repeat="pitch in Scales.JSONData.scales[Scales.selection.scale].steps">{{pitch + ' '}}</span>
+                </div>
+            </div>
         </div>
     </div>
+    
+    <div instrument-modal></div>
 </div>
