--- a/app/components/scales/scales.html
+++ b/app/components/scales/scales.html
@@ -1,20 +1,24 @@
+<div class="container">
 <div class="title-header">
     <div class="main-text">
-        <span class="scale">{{Scales.JSONData.tonics[Scales.selection.tonic] + ' ' + Scales.JSONData.scales[Scales.selection.scale].name}}</span><br/>
+        <span class="scale">{{Scales.JSONData.tonics[Scales.state.tonic]}} {{Scales.scale.getTitle()}}</span> {{Scales.scale.getSubtitle()}}<br/>
         <span class="notes">{{Scales.scaleNotes}}</span>
     </div>
 
     <div class="surface-container">
-        <div><svg zoom-pan
+        <div>
+            <svg zoom-pan
                 class="scales select-disable" 
                 id="svg-surface" 
-                preserveAspectRatio="xMidYMid meet"></svg></div>
+                preserveAspectRatio="xMidYMid meet">
+            </svg>
+        </div>
     </div>
 
     <div class="zoom-pan-control">
-        <i class="fa fa-arrows-alt" ng-click="Scales.svgSurface.resetZoomPan()"></i>
-        <i class="fa fa-search" ng-click="Scales.svgSurface.setActiveControl('zoom')" ng-class="{'active': Scales.svgSurface.activeControl == 'zoom'}"></i>
-        <i class="fa fa-hand-paper-o" ng-click="Scales.svgSurface.setActiveControl('pan')" ng-class="{'active': Scales.svgSurface.activeControl == 'pan'}"></i>
+        <i class="fa fa-arrows-alt hover-pointer" ng-click="Scales.svgSurface.resetZoomPan()"></i>
+        <i class="fa fa-search hover-pointer" ng-click="Scales.svgSurface.setActiveControl('zoom')" ng-class="{'active': Scales.svgSurface.activeControl == 'zoom'}"></i>
+        <i class="fa fa-hand-paper-o hover-pointer" ng-click="Scales.svgSurface.setActiveControl('pan')" ng-class="{'active': Scales.svgSurface.activeControl == 'pan'}"></i>
     </div>
 </div>
 
@@ -28,19 +32,18 @@
             <i class="edit fa fa-gear" ng-click="Scales.modal = 'instrument'"></i>
         </div>
         <div class="content">
-            <div class="instrument-picture">
-                <img ng-class="{'left-handed': Scales.instrument.handedness == 'Left'}" 
-                    src="{{Scales.instrument.arr[Scales.instrument.index].instPanel.path}}" 
-                    viewBox="{{Scales.instrument.arr[Scales.instrument.index].instPanel.viewBox}}"
-                />
-            </div>
-                    
             <div class="row">
-                {{Scales.instrument.arr[Scales.instrument.index].strings}} String
+                {{Scales.instrument.arr[Scales.state.index].strings}} String
                 <span class="pull-right">
                     {{Scales.JSONData.tunings[Scales.instrument.getCurrentTuning()].name.replace('Tuning', '')}} Tuning ({{Scales.getCurrentTuningNotes()}})
                 </span>
             </div>
+            <div class="instrument-picture hover-pointer" ng-click="Scales.modal = 'instrument'">
+                <img ng-class="{'left-handed': Scales.state.handedness == 'Left'}" 
+                    src="{{Scales.instrument.getCurrentInstrument().instPanel.path}}" 
+                    viewBox="{{Scales.instrument.getCurrentInstrument().instPanel.viewBox}}"
+                />
+            </div>                    
         </div>
     </div>
 
@@ -51,22 +54,24 @@
         </div>
         <div class="content">
             <div class="row">
-                <select name="tonic" class="select-sm" ng-model="Scales.selection.tonic" ng-change="Scales.drawing.drawScale()">
+                <select name="tonic" class="select-sm" ng-model="Scales.state.tonic" ng-change="Scales.drawing.drawScale()">
                     <option value="{{key}}" ng-repeat="(key, val) in Scales.JSONData.tonics">{{val}}</option>  
                 </select>
-                <select name="scale" class="select-lg" ng-model="Scales.selection.scale" ng-change="Scales.drawing.drawScale()">     
+                <select name="scale" class="select-lg" ng-model="Scales.state.scale" ng-change="Scales.drawing.drawScale()">     
                     <option value="{{key}}" ng-repeat="(key, val) in Scales.JSONData.scales">{{val.name}}</option>                           
                 </select>
             </div>
-    
             <div class="row">
                 <div ng-mouseover="Scales.tooltip = 'scale'" ng-mouseout="Scales.tooltip = null">
-                    <h1 class="subtitle">{{Scales.JSONData.scales[Scales.selection.scale].name}} Scale</h1>
-                    <span class="subtitle" ng-repeat="pitch in Scales.JSONData.scales[Scales.selection.scale].steps">{{pitch + ' '}}</span>
+                    <h1 class="inline-block">{{Scales.scale.getTitle()}} Scale</h1> {{Scales.scale.getSubtitle()}}<br/>
+                    <span class="subtitle" ng-repeat="pitch in Scales.JSONData.scales[Scales.state.scale].steps">{{pitch + ' '}}</span>
                 </div>
             </div>
+    
         </div>
     </div>
-    
-    <div instrument-modal></div>
+
 </div>
+</div>
+
+<div instrument-modal></div>
