Started circle of fifths

--- a/src/app/components/circle-of-fifths/circle-of-fifths.html
+++ b/src/app/components/circle-of-fifths/circle-of-fifths.html
@@ -1,3 +1,41 @@
 <div style="background: #aaa">
-	CIRCLE
+	<span style="font-size: 2em; padding: 20px; margin: 20px; display: inline-block;">
+		{{Circle.getNotes()}}
+	</span>
+	<br/>
+
+	<style>
+		svg.circle-of-fifths {border: 1px solid red; height: 500px; width: 500px;}
+	</style>
+
+
+	<select name="tonic" size="15" ng-model="Circle.tonic" style="overflow-y: hidden;">
+		<option value="-7">Cb</option>
+		<option value="-6">Gb</option>
+		<option value="-5">Db</option>
+		<option value="-4">Ab</option>
+		<option value="-3">Eb</option>
+		<option value="-2">Bb</option>
+		<option value="-1">F</option>
+		<option value="0">C</option>
+		<option value="1">G</option>
+		<option value="2">D</option>
+		<option value="3">A</option>
+		<option value="4">E</option>
+		<option value="5">B</option>
+		<option value="6">F#</option>
+		<option value="7">C#</option>
+	</select>
+
+	<select name="mode" size="7" ng-model="Circle.mode" style="overflow-y: hidden;">
+		<option value="1">Lydian</option>
+		<option value="0">Major (Ionian)</option>
+		<option value="-1">Mixolydian</option>	
+		<option value="-2">Dorian</option>	
+		<option value="-3">Natural Minor (Aolean)</option>	
+		<option value="-4">Phrygian</option>		
+		<option value="-5">Locrian</option>		
+	</select>
+
+	<svg class="circle-of-fifths select-disable" id="circle-surface" preserveAspectRatio="xMidYMid meet"></svg>
 </div>
