Overhaul of page layout, major css refactor

--- a/src/app/components/chords/chords.html
+++ b/src/app/components/chords/chords.html
@@ -1,3 +1,9 @@
-<div style="background: #aaa">
-Chords
+<div class="container container-fixed">	
+	<div class="row">
+		<div class="col col-12">
+			<div class="panel">
+				Chords
+			</div>
+		</div>
+	</div>
 </div>
