--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,3 +1,9 @@
-<div style="background: #aaa">
-Home
+<div class="container container-fixed">	
+	<div class="row">
+		<div class="col col-12">
+			<div class="panel">
+				Home
+			</div>
+		</div>
+	</div>
 </div>
