--- a/src/assets/less/page-layout.less
+++ b/src/assets/less/page-layout.less
@@ -31,13 +31,31 @@ select, input, button, a.button, img.button {
     background-color: @grey-light;
 }
 
+a.button {
+    padding-left:  12px;
+    padding-right: 12px;
+    text-decoration: none;
+}
+
+button:hover, input[type=submit]:hover, a.button:hover {
+    background-color: @lime;
+    border: 1px solid @grey-dark;
+    color: @button-bg;
+    
+}
+
+img.button:hover {
+    cursor: pointer;
+}
+
 div.nav {    	
-	position: relative;
-	overflow: hidden; /* Clearfix */
-	/*background: #333;*/
 	border-bottom: 1px solid #ccc;
 	color: #eee; 
 
+	/** Removed 
+		position: relative;
+		overflow: hidden;
+	To use clearfix method instead **/
 
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#555555+0,333333+64 */
 	background: rgb(85,85,85); /* Old browsers */
@@ -101,6 +119,15 @@ div.footer {
 	min-height: 200px;
 }
 
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
+}
+
+.clearfix:after {
+  clear: both;
+}
 
 /** Content **/
 div.content {
@@ -199,6 +226,7 @@ div.cookies div {
     right: 0;
     margin: 0 auto;
     padding: 3px 20px;
+    padding-bottom: 7px;
     font-size: 0.8em;
 }
 
