--- a/src/assets/less/scales.less
+++ b/src/assets/less/scales.less
@@ -40,6 +40,19 @@ svg:not(:root) {
     -webkit-transform: scale(-1,1); /* Chrome, Safari, Opera */
     transform: scale(-1,1);
 }
+
+
+.instrument-picture {
+    background: #eee;
+    margin-top: 6px;
+    padding: 12px;
+    padding-bottom: 2px;
+}
+
+.instrument-picture img {    
+    width: 100%;    
+}
+
 /** ! Instruments **/
 
 
